styles.less
@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap");

:root {
	--input-gradient: hsl(249, 99%, 64%) to hsl(278, 94%, 30%);
	--input-error: hsl(0, 100%, 66%);
	--clr-white: hsl(0, 0%, 100%);
	--clr-light-violet: hsl(270, 3%, 87%);
	--clr-dark-violet: hsl(279, 6%, 55%);
	--clr-very-dark-violet: hsl(278, 68%, 11%);
}

*,
*::after,
*::backdrop {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: "Space Grotesk", sans-serif;
}

body {
	font-size: 18px;
}
.cards-container {
	display: flex;
	flex-direction: column;
	letter-spacing: 1.5px;
	&__display {
		position: relative;
		padding: 1rem;
		background-image: url("./images/bg-main-mobile.png");
		background-repeat: no-repeat;
		background-size: cover;
		color: var(--clr-white);
		display: flex;
		flex-direction: column;
		width: 100%;
		height: 240px;
		.card-back {
			background-image: url("./images/bg-card-back.png");
			background-size: contain;
			width: 290px;
			height: 159px;
			position: absolute;
			align-self: flex-end;
			p {
				position: absolute;
				right: 32.5px;
				top: 70px;
				font-size: 12px;
			}
		}
		.card-front {
			background-image: url("./images/bg-card-front.png");
			background-size: contain;
			width: 290px;
			height: 159px;
			position: absolute;
			padding: 20px;
			bottom: -25px;
			display: flex;
			flex-direction: column;
			justify-content: space-between;
			text-transform: uppercase;

			&__left-corner {
				display: flex;
				align-items: center;
				gap: 10px;
				.filled-circle::after {
					content: "";
					display: flex;
					width: 30px;
					height: 30px;
					border-radius: 50%;
					background-color: var(--clr-white);
					z-index: 10;
				}
				.empty-circle::after {
					content: "";
					display: flex;
					width: 15px;
					height: 15px;
					border-radius: 50%;
					border: 1px solid var(--clr-white);
					z-index: 10;
				}
			}
			&__details {
				display: flex;
				flex-direction: column;
				gap: 20px;
			}

			.card-extra-data {
				display: flex;
				justify-content: space-between;
				font-size: 12px;
			}
		}
	}
	&__form {
		padding: 1rem;
		margin-top: 3rem;
		color: var(--clr-very-dark-violet);
		display: flex;
		flex-direction: column;
		gap: 1rem;
		.setting-wrapper {
			display: flex;
			flex-direction: column;
			&.last-row {
				flex-direction: row;
				gap: 20px;

				.date-inputs {
					display: flex;
					gap: 10px;
					input {
						width: 80px;
					}
				}
			}
		}
		input {
			padding: 1rem;
			border-radius: 5px;
			border: 1px solid var(--clr-light-violet);
			font-size: 16px;
			height: 45px;
			width: 100%;
			margin-top: 12px;
			&:focus {
				outline: none;
			}
		}
		label {
			text-transform: uppercase;
			font-size: 14px;
		}
	}
	button {
		padding: 1rem;
		border-radius: 5px;
		border: none;
		font-size: 16px;
		background-color: var(--clr-very-dark-violet);
		color: var(--clr-white);
		cursor: pointer;
		&:focus {
			outline: none;
		}
	}
	.form-completed {
		display: none;
		flex-direction: column;
		align-items: center;
		margin-top: 4rem;
		padding: 1rem;
		h2 {
			margin-top: 1rem;
			text-transform: uppercase;
		}
		button {
			width: 100%;
			margin-top: 4rem;
		}
	}
	@media screen and (min-width: 1024px) {
		flex-direction: row;
		&__display {
			background-image: url("./images/bg-main-desktop.png");
			height: 100vh;
			width: 33%;
			.card-back {
				right: -145px;
				top: 50%;
			}
			.card-front {
				top: 22.5%;
				right: -72.5px;
			}
		}
		&__form {
			display: flex;
			justify-content: center;
			align-content: center;
			width: 100%;
			margin: 0 auto;
			max-width: 380px;
		}
		.form-completed {
			justify-content: center;
			align-content: center;
			width: 100%;
			margin: 0 auto;
			max-width: 380px;
		}
	}
}

